--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/RefineStudio/jira-and-factorial-integration#readme",
   "dependencies": {
+    "api": "^6.0.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
